--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <table cellspacing=20>
     <tr>
       <td><img
-          src="https://scontent.fpoa27-1.fna.fbcdn.net/v/t1.0-9/p960x960/72668314_2621112081274881_1042564115232456704_o.jpg?_nc_cat=110&_nc_sid=85a577&_nc_eui2=AeHSw8t-nFe5I9qC5xbsw4T6ydVBq8l_1Nr6X1o2PeOz0VJfnTrSJP0_KcrhPVLQvMGhvfqQ9ZM3kaQu-WFsmu9L8ErJnDldih3C7ChxzLnDZg&_nc_ohc=F6ihE0UI7E8AX9D7Um0&_nc_ht=scontent.fpoa27-1.fna&_nc_tp=6&oh=f9953a03c0845d2e30164ccf44edf354&oe=5EA706C4"
-          alt="Anderson's Profile Picture" width="230" height=236></td>
+          src="https://media-exp1.licdn.com/dms/image/C5603AQF02Qry2Yhq0A/profile-displayphoto-shrink_200_200/0?e=1602720000&v=beta&t=e4gr0mpRBwwtpA-6bPUhlWLLqKgyuHnW7cUvL0ail4s"
+          alt="Anderson's Profile Picture" style=border-radius:100%  width="230" height=236></td>
       <td>
         <h1>Anderson Oliveira</h1>
         <p><em>Just a Brazilian Guy Learning How to Code</em></p>
@@ -31,7 +31,7 @@
   </ul>
   <hr noshade>
   <h3>Eduaction</h3>
-  <table>
+  <table cellspacing=10>
     <thead>
       <tr>
         <th>Dates</th>
@@ -79,11 +79,11 @@
 
   <h3><a href="Hobbies.html">My Hobbies</a></h3>
 
-  <h3><a href="https://www.linkedin.com/in/andersonlvr64/">Contact</a></h3>
+  <h3><a href="https://www.linkedin.com/in/andersonlvr64/">Linked In</a></h3>
+    
+  <h3><a href="https://www.behance.net/andersooliveir11</a></h3>
 
   <h3><a href="form.html">Form</a></h3>
-
-
 
 </body>
 
