--- a/index.html
+++ b/index.html
@@ -77,13 +77,11 @@
 
   <hr noshade>
 
-  <h3><a href="Hobbies.html">My Hobbies</a></h3>
-
   <h3><a href="https://www.linkedin.com/in/andersonlvr64/">Linked In</a></h3>
     
-  <h3><a href="https://www.behance.net/andersooliveir11</a></h3>
+  <h3><a href="https://www.behance.net/andersooliveir11/"</a></h3>
 
-  <h3><a href="form.html">Form</a></h3>
+  <h3 style="text-align:center">All Rights Reserved</h3>
 
 </body>
 
