--- a/index.html
+++ b/index.html
@@ -74,15 +74,14 @@
     </tr>
   </table>
   <br>
-
-  <hr noshade>
-
-  <h3><a href="https://www.linkedin.com/in/andersonlvr64/">Linked In</a></h3>
     
-  <h3><a href="https://www.behance.net/andersooliveir11/"</a></h3>
+  <ul>
+    <li><a href="https://www.linkedin.com/in/oianderson/">Linked In</a></li>
+    <br>
+    <li><a href="https://www.behance.net/andersooliveir11/">Behance</a></li>
+  </ul>
 
-  <h4 style="text-align:center">All Rights Reserved</h4>
+   <h4 style="text-align:center">All Rights Reserved</h4>
 
 </body>
-
 </html>
