--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <p><em>Just a Brazilian Guy Learning How to Code</em></p>
         <p>Hi! My name is Anderson Oliveira and I'm attending to Management on the Federal University of Rio Grande do Sul. I'm learning to code because I think it's a crucial skill if we want to be part, even if it's a little part, of
           the world's future.</p>
+        <p><a href="https://www.linkedin.com/in/oianderson/">Linked In</a><br>
+           <a href="https://www.behance.net/andersooliveir11/">Behance</a>
+          
       </td>
     </tr>
   </table>
@@ -29,28 +32,9 @@
     <br>
     <li><a href="https://www.ubi.pt/">UBI</a> <em>(University of Beira Interior)</em><br>Marketing<br>2019-2020</li>
   </ul>
+  
   <hr noshade>
-  <h3>Eduaction</h3>
-  <table cellspacing=10>
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>University</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2016-2021</td>
-        <td>UFRGS</td>
-      </tr>
-      <tr>
-        <td>2019-2020</td>
-        <td>UBI</td>
-      </tr>
-    </tbody>
-    <tfoot>
-    </tfoot>
-  </table>
+
   <br>
 
   <hr noshade>
@@ -74,14 +58,8 @@
     </tr>
   </table>
   <br>
-    
-  <ul>
-    <li><a href="https://www.linkedin.com/in/oianderson/">Linked In</a></li>
-    <br>
-    <li><a href="https://www.behance.net/andersooliveir11/">Behance</a></li>
-  </ul>
-
-   <h4 style="text-align:center">All Rights Reserved</h4>
+  
+  <h4 style="text-align:center">All Rights Reserved</h4>
 
 </body>
 </html>
